--- a/style/style.scss
+++ b/style/style.scss
@@ -194,46 +194,6 @@ $glb_px_border-radius: 15px;
 }
 
 /* 3_Layout */
-#progress {
-  //OK
-  /* Declaration */
-  //variables
-  $prg_px_progress: 3px !global;
-  //mixin
-  @mixin bgc_width($_bgc, $_width) {
-    background-color: $_bgc;
-    width: $_width;
-  }
-  //keyframes
-  @keyframes progress {
-    0% {
-      @include bgc_width($glb_color_darkgray, 0%);
-    }
-    50% {
-      @include bgc_width($glb_color_lightgray, 50%);
-    }
-    100% {
-      @include bgc_width($glb_color_darkgray, 100%);
-    }
-  }
-
-  /* Property */
-  animation: {
-    delay: calc(var(--scrollRatio) * -1s);
-    duration: 1s;
-    fill-mode: both;
-    iteration-count: 1;
-    name: progress;
-    play-state: paused;
-    timing-function: ease-out;
-  }
-  //position
-  position: fixed;
-  height: $prg_px_progress;
-  z-index: 500;
-  //design
-  border-radius: $glb_px_border-radius;
-}
 #wrap {
   /* Declaration */
   //variables
@@ -267,7 +227,7 @@ $glb_px_border-radius: 15px;
     }
     //position
     position: sticky;
-    top: $prg_px_progress; //for sticky position.
+    top: 3px; //for sticky position.
     padding: 0 $wrap_vw_header_padding;
     margin: 0 $wrap_vw_header_margin;
     z-index: 500;
