--- a/views/Body.pug
+++ b/views/Body.pug
@@ -1,1 +1,5 @@
-include body/wrap.pug
+#wrap
+  include body/header.pug
+  include body/section.pug
+  include body/aside.pug
+  include body/footer.pug
