--- a/views/Head.pug
+++ b/views/Head.pug
@@ -1,4 +1,19 @@
-include head/basic.pug
-include head/google.pug
-include head/MathJax.pug
-include head/Highlight.js.pug
+//- basic
+meta(charset="utf-8" name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width")
+title [##_page_title_##]
+
+//- google
+.
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4320074003238230" crossorigin="anonymous"></script>
+
+//- MathJax
+.
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML"></script>
+  <script fixed type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+
+//- Highlight.js
+.
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/styles/default.min.css">
+  <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.7.0/highlightjs-line-numbers.min.js"></script>
+  <script fixed>hljs.highlightAll(); hljs.initLineNumbersOnLoad();</script>
