--- a/assets/components/PageTop/PageTop.scss
+++ b/assets/components/PageTop/PageTop.scss
@@ -1,5 +1,9 @@
 .PageTop {
   button {
+    /* Declaration */
+    $color_main: lighten(lightgray, 10%);
+    $color_sub: white;
+
     /* Property */
     //flex
     display: flex;
@@ -8,9 +12,9 @@
     //design
     width: 30px;
     height: 30px;
-    border: 1px solid lighten(lightgray, 10%);
+    border: 1px solid $color_main;
     border-radius: 50%;
-    background-color: white;
+    background-color: $color_sub;
     //position
     position: fixed;
     right: 40px;
@@ -19,7 +23,7 @@
 
     /* Selector */
     &:hover {
-      background-color: lighten(lightgray, 10%);
+      background-color: $color_main;
     }
   }
 }
