--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@ html
 
     //- css
     style
-      include style/style.css
+      include style/body.css
 
     //- html
     include views/head.pug
