--- a/style/components/_media.scss
+++ b/style/components/_media.scss
@@ -10,9 +10,7 @@
   }
 }
 @media screen and (max-width: (1366px + $glb_px_scrollbar)) {
-  #wrap > header > .util > #menu > button {
-    display: block;
-  }
+  //empty
 }
 @media screen and (max-width: (1024px + $glb_px_scrollbar)) {
   #wrap {
