feat: many things...

--- a/style/body/_aside.scss
+++ b/style/body/_aside.scss
@@ -20,7 +20,7 @@ aside {
   //scroll bar
   &::-webkit-scrollbar {
     display: none;
-  } //OK
+  }
   //others
   > * {
     margin: 10px 10px 20px 10px;
