--- a/views/body/aside.pug
+++ b/views/body/aside.pug
@@ -1,7 +1,7 @@
 aside
   s_sidebar
     s_sidebar_element
-      nav.category [##_category_list_##]
+      .category [##_category_list_##]
 
     s_sidebar_element
       .tags
