--- a/views/body/header.pug
+++ b/views/body/header.pug
@@ -1,12 +1,11 @@
 header
-  .util
-    #search
-      s_search
-        button(type="submit" onclick="[##_search_onclick_submit_##]")
-        label(for="[##_search_name_##]" class="screen_out")
-        input(id="[##_search_name_##]" type="text" name="[##_search_name_##]" value="[##_search_text_##]" placeholder="검색내용을 입력하세요." onkeypress="if (event.keyCode == 13) { [##_search_onclick_submit_##] }")
+  #search
+    s_search
+      button(type="submit" onclick="[##_search_onclick_submit_##]")
+      label(for="[##_search_name_##]" class="screen_out")
+      input(id="[##_search_name_##]" type="text" name="[##_search_name_##]" value="[##_search_text_##]" placeholder="검색내용을 입력하세요." onkeypress="if (event.keyCode == 13) { [##_search_onclick_submit_##] }")
 
   h1
     a(href="[##_blog_link_##]") [##_title_##]
 
-  | [##_blog_menu_##]
+  div
